<resources>
    <string name="app_name">Composition</string>\

    <string name="question_mark">?</string>


    <string name="iv_welcome_logo">Welcome LOGO</string>
    <string name="iv_game_over">Game Over</string>


    <string name="btn_welcome_text">Got it!</string>
    <string name="btn_chose_test_text">TEST</string>
    <string name="btn_choose_easy_text">EASY</string>
    <string name="btn_choose_normal_text">NORMAL</string>
    <string name="btn_choose_hard_text">HARD</string>
    <string name="btn_finish_text">Try again</string>
    <string name="btn_start_game_title">Start</string>
    <string name="btn_custom_game_title">Custom game</string>
    <string name="btn_rules_title">Rules</string>
    <string name="bnt_back_title">Back</string>

    <string name="title_welcome_screen">Quick Math</string>
    <string name="title_rules">Rules</string>
    <string name="title_level_difficulty">Level Difficulty</string>
    <string name="title_custom_game">Setup Game</string>


    <string name="description_rules">You will see three shapes: two at the bottom and one at the top. Two of them will contain numbers. \n\nThe goal is to make the sum of the numbers in the two bottom shapes equal to the number in the top shape by inserting the missing number.\n \nExample: If the top circle contains the number 7, one of the bottom shapes has a question mark, and the other has the number 4, then the missing number should be 3 because 3 + 4 = 7.</string>
    <string name="description_right_answers">Right answers: %s (min: %s)</string>
    <string name="description_required_score_tv">Required number of correct answers: %d</string>
    <string name="description_score_answers_tv">Your score: %d</string>
    <string name="description_needed_answers_percentage_tv">Required percentage of answers: %.2f</string>
    <string name="description_percentage_answers">Percentage of answers: %.2f</string>

    <string name="error_max_sum_value">Parameter Max Sum Value is invalid, please write correct value! (Min: 7) </string>
    <string name="error_min_percent_of_right_answers">Parameter Min Percent Of Right Answers is invalid, please write correct value!</string>
    <string name="error_min_count_of_right_answers">Parameter Min Count Of Right Answers is invalid, please write correct value!</string>
    <string name="error_game_time">Parameter Game Time is invalid, please write correct value!</string>


    <string name="hint_max_sum_value">Max sum value:</string>
    <string name="hint_min_count_of_right_answers">Min count of right answers:</string>
    <string name="hint_min_percent_of_right_answers">Min percent of right answers:</string>
    <string name="hint_game_time">Game time (in seconds):</string>


</resources>
