<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">


    <TextView
        android:id="@+id/tvRulesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/title_level_difficulty"
        android:textAlignment="center"
        android:textColor="@color/black_green"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLevelTest"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/btn_chose_test_text"
        android:textAllCaps="true"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/light_purple"
        app:layout_constraintTop_toBottomOf="@id/tvRulesTitle" />

    <Button
        android:id="@+id/btnLevelEasy"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_choose_easy_text"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintTop_toBottomOf="@id/btnLevelTest" />

    <Button
        android:id="@+id/btnLevelNormal"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_choose_normal_text"
        android:textAllCaps="true"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintTop_toBottomOf="@id/btnLevelEasy"/>

    <Button
        android:id="@+id/btnLevelHard"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_choose_hard_text"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/btnLevelNormal"/>


    <Button
        android:id="@+id/btnBack"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/bnt_back_title"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>