<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".presentation.GameMainMenuFragment">


    <ImageView
        android:id="@+id/ivLogoWelcome"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:contentDescription="@string/iv_welcome_logo"
        android:src="@drawable/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/title_welcome_screen"
        android:textAlignment="center"
        android:textColor="@color/black_green"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoWelcome" />

    <Button
        android:id="@+id/btnStartGame"
        android:background="@drawable/button_style_selector"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_start_game_title"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/bntCustomGame"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_start_game_title"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btnStartGame" />

    <Button
        android:id="@+id/btnRules"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_start_game_title"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/bntCustomGame" />


</androidx.constraintlayout.widget.ConstraintLayout>